--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "react": "18.3.1",
-    "react-native": "0.76.3"
+    "react-native": "0.76.3",
+    "react-native-image-crop-picker": "^0.41.6",
+    "react-native-permissions": "^5.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
