--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native/gradle-plugin": "^0.76.5",
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/stack": "^7.1.0",
     "react": "18.3.1",
     "react-native": "0.76.3",
     "react-native-image-crop-picker": "^0.41.6",
-    "react-native-permissions": "^5.2.1"
+    "react-native-permissions": "^5.2.1",
+    "react-native-safe-area-context": "^5.0.0",
+    "react-native-screens": "^4.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -25,7 +30,7 @@
     "@react-native/babel-preset": "0.76.3",
     "@react-native/eslint-config": "0.76.3",
     "@react-native/metro-config": "0.76.3",
-    "@react-native/typescript-config": "0.76.3",
+    "@react-native/typescript-config": "^0.76.3",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
